--- a/css/style.css
+++ b/css/style.css
@@ -755,6 +755,11 @@ IE11対策 _:-ms-lang(x)::-ms-backdrop, .d-demo {
   font-style: normal;
 }
 /*-------------私たちにお任せくださいセクション----------------*/
+
+.sec_text_1{
+	line-height: 1.5em;
+}
+
 .sec_reason {
   width: 100%;
   margin: 0 auto;
@@ -766,7 +771,7 @@ IE11対策 _:-ms-lang(x)::-ms-backdrop, .d-demo {
 }
 .sec_reason_wrap {
   width: 90%;
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 .title_sec3 {
@@ -815,7 +820,7 @@ IE11対策 _:-ms-lang(x)::-ms-backdrop, .d-demo {
 }
 
 .check_icon{
-	width: 40px;
+	width: 35px;
 	height: auto;
 	position: absolute;
 	top: 20px;
@@ -864,18 +869,32 @@ IE11対策 _:-ms-lang(x)::-ms-backdrop, .d-demo {
 .reason_number_2 span {
   font-size: 1.8rem;
 }
+
+.res_point p{
+	display: none;
+}
+
 .point_1, .point_2, .point_3, .point_4, .point_5 {
   display: block;
 }
-.point_1, .point_4 {
+.point_1,.point_2{
+	font-size: 1.2rem;
+  padding: 30px 20px 30px 20px;
+}
+
+.point_4 {
   padding: 30px 20px 20px 20px;
 }
-.point_2, .point_5 {
+ .point_5 {
+	font-size: 1.2rem; 
   padding: 40px 20px 20px 20px;
 }
 .point_3 {
   padding: 10px 20px 20px 20px;
 }
+
+
+
 /*-------------RISING INNOVATIONが選ばれる理由セクション----------------*/
 .sec_reason_2 {
   background-color: #ffffff;
@@ -917,7 +936,7 @@ IE11対策 _:-ms-lang(x)::-ms-backdrop, .d-demo {
   line-height: 1.7em;
 }
 .point span {
-  font-size: 1.0rem;
+  font-size: 1.1rem;
 }
 .circle_img {
   border-radius: 50%;
@@ -1832,8 +1851,9 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
   display: none;
 }
 .ceo_text h2 {
-  font-size: 2.0rem;
-	margin-top: -20px;
+  font-size: 2.5rem;
+	
+	line-height: 0.8em;
 }
 
 .ceo_text h2 span{
@@ -1852,6 +1872,7 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
 	width: 90%;
 	margin: 0 auto;
 	margin-bottom: 30px;
+	line-height: 1.5em;
 	font-size: 1.0rem;
 }
 
@@ -1862,13 +1883,14 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
 .ceo_img img{
 	width: 300px;
 	height: auto;
+	border-radius: 10px;
 }
 
 .ceo_post {
   font-size: 1.0rem;
 }
 .staff li {
-  margin-right: 40px;
+  margin-right: 50px;
   text-align: center;
 	width: 150px;
 }
@@ -1890,10 +1912,12 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
 .staff_img img{
 	width: 150px;
 	height: auto;
+	border-radius: 50px;
 }
 
 .staff_name {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
+	margin-bottom: 8px;
 }
 /*-------------下層ページトピックス一覧----------------------------*/
 .topics_wrap {
@@ -2428,20 +2452,13 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
     margin-left: 50px;
   }
   .sec_reason_1wr li > p {
-    width: 80%;
-    font-size: 1.3rem;
+    width: 90%;
+    
     font-weight: bold;
     letter-spacing: 0.08em;
     text-align: center;
   }
-  .sec_reason_1wr li > div > img {
-    display: none;
-    position: absolute;
-    top: 40px;
-    right: 0px;
-    width: 90px;
-    height: auto;
-  }
+  
   .reason_number_2 {
     position: absolute;
     top: -20px;
@@ -2454,16 +2471,23 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
     line-height: 0.6em;
   }
   .point_1, .point_2, .point_3, .point_4, .point_5 {
+	  font-size: 1.2rem;
     display: block;
   }
   .point_1, .point_2 {
+	  font-size: 1.3rem;
     padding: 60px 50px 0px 0px;
   }
-  .point_3, .point_4 {
-    padding: 30px 50px 30px 0px;
+  .point_3 { 
+    padding: 10px 50px 10px 0px;
   }
+	.point_4{
+		padding: 15px 50px 10px 0px;
+	}
+	
   .point_5 {
-    padding: 40px 50px 40px 0px;
+	  font-size: 1.3rem;
+    padding: 25px 50px 20px 0px;
   }
   /*わたしたちについて*/
   .mission_break {
