--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,9 @@ a:hover {
   background: rgb(255, 255, 255);
   background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(241, 244, 252, 1) 100%);
 }
+
+
+
 .title_bg_img5 {
   position: absolute;
   z-index: -10;
@@ -799,9 +802,10 @@ IE11対策 _:-ms-lang(x)::-ms-backdrop, .d-demo {
   font-size: 1.1rem;
 }
 .mission_img {
-  /*width: 650px;*/
+  
   height: auto;
   overflow: hidden;
+	margin: 0 auto;
 }
 .res_sec_reason_h3 {
   display: none;
@@ -1229,11 +1233,13 @@ IE11対策 _:-ms-lang(x)::-ms-backdrop, .d-demo {
   margin-bottom: 100px;
   /*background-color: var(--blue3);*/
 }
+
+
 .res_sec_mission {
   display: none;
 }
 .sec_mission_wrap {
-  width: 80%;
+  width: 75%;
   margin: 0 auto;
 }
 .title_sec3 {
@@ -1264,8 +1270,12 @@ IE11対策 _:-ms-lang(x)::-ms-backdrop, .d-demo {
   /*width: 650px;*/
   height: auto;
   overflow: hidden;
-  margin-right: 50px;
+
+  margin-right: 30px;
 }
+
+
+
 .res_sec_mission_h3 {
   display: none;
 }
@@ -1716,6 +1726,7 @@ footer small {
   margin: 0 auto;
   width: 85%;
   position: relative;
+	z-index: 10;
 }
 .page_title_en {
   font-weight: bold;
@@ -1791,13 +1802,17 @@ footer small {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%23ffffff' stroke-width='0.7' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cuse fill='%23fcfcfc' href='%23s' y='2'/%3E%3Cuse fill='%23fcfcfc' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='2'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23f2f2f2'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23ffffff'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%23efefef'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23080969'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23080969'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23080969'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
+	padding-bottom: 50px;
 }
 .res_contact_wrap {
   display: none;
 }
 .contact_wrap {
   margin: 0 auto;
+	width: 70%;
+	max-width: 1200px;
   margin-top: 70px;
+background-color:rgba(255,255,255,0.65);
 }
 
 .contact_table_wrap{
@@ -1875,18 +1890,45 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%23ffffff' stroke-width='0.7' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cuse fill='%23fcfcfc' href='%23s' y='2'/%3E%3Cuse fill='%23fcfcfc' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='2'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23f2f2f2'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23ffffff'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%23efefef'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23080969'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23080969'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(26.6) translate(-962.41 -721.8)'%3E%3Cg fill='%23080969'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
+	position: relative;
+	z-index: -1;
+	
 }
+/*.member_wrap_wrap{
+	position: relative;
+	width: 80%;
+	margin: 0 auto;
+}*/
+
+/*.title_bg_img7 {
+  position: absolute;
+  z-index: 0;
+  top: 150px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 90%;
+  height: 1200px;
+  background-color:#dfdfdf;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(241, 244, 252, 1) 100%);
+}*/
+
 .member_wrap {
-  width: 800px;
+  width: 900px;
   margin: 0 auto;
   padding-bottom: 150px;
+	position: relative;
+	z-index: 10;
+	padding: 70px 70px;
+	background-color:rgba(255,255,255,0.65);
 }
 .res_member_wrap {
   display: none;
 }
 .ceo_text h2 {
-  font-size: 2.5rem;
-	
+  font-size: 2.7rem;
+	color: var(--blue3);
 	line-height: 0.8em;
 }
 
@@ -1906,18 +1948,19 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
 	width: 90%;
 	margin: 0 auto;
 	margin-bottom: 30px;
-	line-height: 1.5em;
+	line-height: 1.7em;
 	font-size: 1.0rem;
+	text-align: center;
 }
 
 .ceo_img {
-  margin-right: 40px;
+  margin-right: 60px;
 }
 
 .ceo_img img{
 	width: 300px;
 	height: auto;
-	border-radius: 10px;
+	
 }
 
 .ceo_post {
@@ -1946,12 +1989,14 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
 .staff_img img{
 	width: 150px;
 	height: auto;
-	border-radius: 50px;
+	/*border-radius: 50px;*/
 }
 
 .staff_name {
   font-size: 1.3rem;
 	margin-bottom: 8px;
+	color: var(--blue3);
+	font-weight: bold;
 }
 /*-------------下層ページトピックス一覧----------------------------*/
 .topics_wrap {
@@ -2054,14 +2099,14 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
   background-image: linear-gradient(#f4eb8f 0%, #f4eb8f 100%);
   background-repeat: no-repeat;
   background-position: left bottom;
-  background-size: 0% 100%;
+  background-size: 0% 40%;
   transition: 2s;
   margin: 0;
   padding: 0;
 } /*黄色マーカー*/
 .marker_2.on {
   /* 横方向を100%にして、マーカーを引く */
-  background-size: 100% 100%;
+  background-size: 100% 40%;
 }
 /*------------------*/
 .marker_3 {
@@ -2530,6 +2575,10 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
   .sec_reason_text {
     width: 100%;
   }
+	.mission_img{
+		margin-right: 0px;
+	}
+	
 }
 @media screen and (max-width: 1000px) {
   /*選ばれる理由*/
